--- a/meson.build
+++ b/meson.build
@@ -14,5 +14,11 @@ intl_lib = library('intl',
   darwin_versions : ['10', '10.5'],
   install : true)
 
+c_args = []
+if get_option('default_library') == 'static'
+  c_args += ['-DG_INTL_STATIC_COMPILATION']
+endif
+
 intl_dep = declare_dependency(link_with : intl_lib,
+  compile_args: c_args,
   include_directories : include_directories('.'))
