--- a/meson.build
+++ b/meson.build
@@ -2,7 +2,7 @@ project('proxy-libintl', 'c',
   version : '1',
   meson_version : '>= 0.48.0',
   default_options : [ 'warning_level=1',
-                      'c_std=gnu99',
+                      'c_std=c99',
                       'buildtype=debugoptimized' ])
 
 if get_option('default_library') == 'static'
